# IntelliHire

./: .gitignore  README.md
backend/: .env  .env.example  main.py  pyproject.toml  requirements.txt
backend/src/: celery_app.py  main.py
backend/src/api/rest/: app.py  dependencies.py
backend/src/api/rest/middleware/: error_handler.py  logging.py
backend/src/api/rest/routes/: admin_router.py  application_router.py  auth.py  candidate_router.py  health.py  job.py  resume_router.py  search.py  sourcing.py
backend/src/api/routes/: auth.py
backend/src/config/: settings.py
backend/src/control/agents/: jd_generation_agent.py  sourcing_agent.py
backend/src/core/: security.py
backend/src/core/exceptions/: application_exceptions.py  auth_exceptions.py
backend/src/core/services/: application_service.py  auth_service.py  candidate_service.py  job_service.py  parser_service.py  pipeline_service.py  resume_langchain_service.py  resume_service.py  scraper_service.py  sourcing_service.py
backend/src/core/tasks/: application_tasks.py  event_loop.py  resume_tasks.py  sourcing_tasks.py
backend/src/data/clients/: postgres_client.py  s3_client.py
backend/src/data/models/postgres/: __init__.py  application.py  base.py  blacklist.py  candidate.py  job.py  (+6 more)
backend/src/data/repositories/: application_repo.py  blacklist_repo.py  candidate_repo.py  job_repo.py  resume_repo.py  sourcing_repo.py  token_repo.py  user_repo.py
backend/src/observability/logging/: logger.py
backend/src/schemas/: auth_schema.py  job_schema.py  user_schema.py
backend/src/utils/: security.py
(+94 files in other folders)
